<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="vaida.dryzaite.foodmood.ui.homePage.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_fragment_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.homePage.HomeFragment">

        <TextView
            android:id="@+id/generate_random_meal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis_regular"
            android:text="@string/grab_idea_textView"
            android:textSize="@dimen/generate_random_meal_text_size"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_right"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_left"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_top" />

        <RadioGroup
            android:id="@+id/meal_selection_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_middle"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_right"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_left"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_middle">

            <RadioButton
                android:id="@+id/breakfast_icon_homepage"
                style="@style/MealSelectionRadioButton"
                android:foreground="@drawable/ic_1"
                android:onClick="@{() -> homeViewModel.onSetMealType(1)}" />

            <RadioButton
                android:id="@+id/brunch_icon_homepage"
                style="@style/MealSelectionRadioButton"
                android:foreground="@drawable/ic_2"
                android:onClick="@{() -> homeViewModel.onSetMealType(2)}" />

            <RadioButton
                android:id="@+id/lunch_icon_homepage"
                style="@style/MealSelectionRadioButton"
                android:foreground="@drawable/ic_3"
                android:onClick="@{() -> homeViewModel.onSetMealType(3)}" />

            <RadioButton
                android:id="@+id/dinner_icon_homepage"
                style="@style/MealSelectionRadioButton"
                android:foreground="@drawable/ic_4"
                android:onClick="@{() -> homeViewModel.onSetMealType(4)}" />

            <RadioButton
                android:id="@+id/sweets_icon_homepage"
                style="@style/MealSelectionRadioButton"
                android:foreground="@drawable/ic_5"
                android:onClick="@{() -> homeViewModel.onSetMealType(5)}" />
        </RadioGroup>

        <TextView
            android:id="@+id/breakfast_text"
            style="@style/MealSelectionTextView"
            android:text="@string/breakfast"
            app:layout_constraintEnd_toStartOf="@+id/brunch_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group" />

        <TextView
            android:id="@+id/brunch_text"
            style="@style/MealSelectionTextView"
            android:text="@string/brunch"
            app:layout_constraintEnd_toStartOf="@+id/lunch_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/breakfast_text"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group" />

        <TextView
            android:id="@+id/lunch_text"
            style="@style/MealSelectionTextView"
            android:text="@string/lunch"
            app:layout_constraintEnd_toStartOf="@+id/dinner_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/brunch_text"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group" />

        <TextView
            android:id="@+id/dinner_text"
            style="@style/MealSelectionTextView"
            android:text="@string/dinner"
            app:layout_constraintEnd_toStartOf="@+id/sweets_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lunch_text"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group" />

        <TextView
            android:id="@+id/sweets_text"
            style="@style/MealSelectionTextView"
            android:text="@string/sweets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dinner_text"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group" />

        <CheckBox
            android:id="@+id/fish_checkbox"
            style="@style/MealSelectionCheckBox"
            app:layout_constraintEnd_toStartOf="@id/veggie_checkbox"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_left"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group"
            app:layout_constraintBottom_toTopOf="@id/random_Button"
            android:text="@string/fish_craving_checkbox"
            android:checked="@={homeViewModel.fish}" />

        <CheckBox
            android:id="@+id/veggie_checkbox"
            style="@style/MealSelectionCheckBox"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_right"
            app:layout_constraintStart_toEndOf="@id/fish_checkbox"
            app:layout_constraintTop_toBottomOf="@id/meal_selection_radio_group"
            app:layout_constraintBottom_toTopOf="@id/random_Button"
            android:text="@string/veggie_checkbox"
            android:checked="@={homeViewModel.veggie}" />


        <Button
            android:id="@+id/random_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:fontFamily="@font/robotomono_bold"
            android:text="@string/random_button"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_bottom"
            android:onClick="@{() -> homeViewModel.onGenerateButtonClick()}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_bottom_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
