<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="vaida.dryzaite.foodmood.ui.suggestionPage.SuggestionViewModel" />
        <variable
            name="args"
            type="vaida.dryzaite.foodmood.ui.suggestionPage.SuggestionFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/gradient_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/gradient_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_top2"
            app:srcCompat="@drawable/rounded_background" />

        <TextView
            android:id="@+id/suggestion_for_meal_text_view"
            style="@style/SimpleTextViewTitle"
            android:lines="2"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_right"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_left"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline_top"
            tools:text="@string/suggestion_for_meal_text"
            app:mealTypeFormatted="@{viewModel.randomRecipe ?? args.recipeEntry}"
            />

        <TextView
            android:id="@+id/suggestion_text_view"
            style="@style/SimpleTextViewTitle"
            android:text="@{viewModel.randomRecipe.title ?? args.recipeEntry.title}"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vertical_guideline_right"
            app:layout_constraintStart_toStartOf="@id/vertical_guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/suggestion"/>

        <Button
            android:id="@+id/show_me_how_button"
            style="@style/SolidButton"
            android:text="@string/show_me_how_button"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_bottom_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_bottom"
            app:layout_constraintVertical_chainStyle="spread"
            android:onClick="@{() -> viewModel.onButtonClick(viewModel.randomRecipe.recipe ?? args.recipeEntry.recipe)}"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_top2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.125" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_bottom_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
